ECOSENT-921 fixed points: first gr: 3, 5; second gr: 1-5; Badge extend for small mode; Dashlet - collapse icons; Dashboard: Badge + DocStatus

--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -233,8 +233,9 @@
   }
 
   &-hamburger {
-    &__btn {
+    &__btn.ecos-btn {
       position: relative;
+      padding: 0 5px;
 
       .ecos-btn__i {
         margin-right: 0;
