--- a/src/pages/Dashboard/style.scss
+++ b/src/pages/Dashboard/style.scss
@@ -12,6 +12,10 @@
       justify-content: flex-start;
       align-items: center;
       margin-top: 17px;
+
+      & > :nth-child(n):not(:last-child) {
+        margin-right: 15px;
+      }
     }
 
     &-placeholder {
@@ -26,21 +30,14 @@
       font-size: 16px;
       line-height: 22px;
       color: $text-color-dark;
-      margin-right: 15px;
     }
 
-    &-version {
-      font-style: normal;
-      font-weight: bold;
-      font-size: 16px;
-      line-height: 20px;
-      color: $color-white;
-      padding: 0 9px;
-      background: $color-gray-5;
-      border-radius: 100px;
-      display: inline-flex;
-      align-items: center;
-      text-align: center;
+    & > &-status {
+      padding: 0;
+
+      .ecos-doc-status__data {
+        flex: unset;
+      }
     }
 
     &-mod {
@@ -59,7 +56,7 @@
     &_mobile {
       background-color: $color-white;
       margin-bottom: 0;
-      padding-bottom: 15px;
+      padding-bottom: 10px;
       border-bottom: 2px solid $color-gray-4;
       position: relative;
       z-index: 1;
@@ -102,8 +99,9 @@
       z-index: 1;
       margin-bottom: 10px;
 
-      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.15);
-
+      //hide scroll
+      -ms-overflow-style: none;
+      scrollbar-width: none;
       &::-webkit-scrollbar {
         display: none;
       }
